--- a/backend/keycloak-theme/asiatravelplan/login/resources/css/asiatravelplan.css
+++ b/backend/keycloak-theme/asiatravelplan/login/resources/css/asiatravelplan.css
@@ -43,7 +43,7 @@ body.kcBodyClass {
   height: 76px;
   width: 320px;
   margin: 0 auto 20px auto;
-  background: url("../img/logo-chapter2.svg") center center / contain no-repeat;
+  background: url("../img/logo-asiatravelplan.svg") center center / contain no-repeat;
 }
 
 .pf-c-button.pf-m-primary,
