--- a/backend/keycloak-theme/asiatravelplan/login/resources/css/asiatravelplan.css
+++ b/backend/keycloak-theme/asiatravelplan/login/resources/css/asiatravelplan.css
@@ -29,9 +29,14 @@ body.kcBodyClass {
 }
 
 #kc-page-title,
+#kc-header,
+#kc-header-wrapper,
 .pf-v5-c-login__main-header,
 .pf-c-login__main-header,
-.login-pf-page .login-pf-page-header {
+.login-pf-page .login-pf-page-header,
+.login-pf-page .login-pf-signup,
+.pf-v5-c-login__main-footer,
+.pf-c-login__main-footer {
   display: none !important;
 }
 
@@ -42,15 +47,6 @@ body.kcBodyClass {
   border: 1px solid var(--c2-line) !important;
   border-radius: 14px !important;
   box-shadow: 0 12px 30px rgba(19, 52, 68, 0.1) !important;
-}
-
-#kc-header-wrapper {
-  font-size: 0 !important;
-  line-height: 0 !important;
-  height: 64px;
-  width: min(280px, calc(100vw - 72px));
-  margin: 0 auto 20px auto;
-  background: url("../img/logo-asiatravelplan.svg") center center / contain no-repeat;
 }
 
 .pf-c-button.pf-m-primary,
@@ -85,55 +81,34 @@ a {
 .login-pf-page {
   background: #ffffff !important;
   background-image: none !important;
-  min-height: 100vh;
+  min-height: auto !important;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start !important;
   overflow-y: auto;
-  padding: 24px 16px;
+  padding: 8px 16px 16px !important;
 }
 
 .login-pf-page .card-pf {
   width: 100%;
   max-width: min(420px, calc(100vw - 32px));
-  margin: 0 auto;
+  margin: 0 auto !important;
 }
 
-#kc-header,
-#kc-header-wrapper,
-#kc-content-wrapper {
-  max-width: min(420px, calc(100vw - 32px)) !important;
+#kc-content-wrapper,
+#kc-form,
+#kc-form-wrapper {
+  max-width: min(360px, calc(100vw - 48px)) !important;
   margin-left: auto !important;
   margin-right: auto !important;
-}
-
-.login-pf-page .login-pf-signup,
-.login-pf-page .login-pf-page-header {
-  max-width: 420px;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
+  margin-top: 0 !important;
+  padding-top: 0 !important;
 }
 
 /* Keycloak modern (PatternFly) login layout */
 .pf-c-login,
 .pf-c-login__container,
-.pf-c-login__main {
-  max-width: min(420px, calc(100vw - 32px));
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#kc-form,
-#kc-form-wrapper,
-.pf-c-login__main-body {
-  width: 100%;
-  max-width: min(360px, calc(100vw - 48px));
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/* Keycloak PFv5 classnames (newer versions) */
+.pf-c-login__main,
 .pf-v5-c-login,
 .pf-v5-c-login__container,
 .pf-v5-c-login__main,
@@ -142,15 +117,26 @@ a {
 .pf-v5-c-page__main-section {
   background: #ffffff !important;
   background-image: none !important;
+  min-height: auto !important;
+  align-items: flex-start !important;
+  justify-content: flex-start !important;
+  padding-top: 0 !important;
+  margin-top: 0 !important;
 }
 
+.pf-c-login__container,
+.pf-c-login__main,
 .pf-v5-c-login__container,
 .pf-v5-c-login__main {
   max-width: min(420px, calc(100vw - 32px)) !important;
   margin-left: auto !important;
   margin-right: auto !important;
+  margin-top: 0 !important;
 }
 
+.pf-c-login__main-body,
+.pf-c-form,
+.pf-c-form__group,
 .pf-v5-c-login__main-body,
 .pf-v5-c-form,
 .pf-v5-c-form__group,
@@ -159,18 +145,19 @@ a {
   max-width: min(360px, calc(100vw - 48px)) !important;
   margin-left: auto !important;
   margin-right: auto !important;
+  margin-top: 0 !important;
+  padding-top: 0 !important;
 }
 
 .pf-v5-c-form-control,
+.pf-c-form-control,
 #username,
 #password {
   width: 100% !important;
   max-width: min(360px, calc(100vw - 48px)) !important;
 }
 
-#kc-form-buttons,
-.pf-v5-c-login__main-footer,
-.pf-c-login__main-footer {
+#kc-form-buttons {
   max-width: min(360px, calc(100vw - 48px)) !important;
   margin-left: auto !important;
   margin-right: auto !important;
